fix #156 use/require java 17